<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_marginTop="260dp"
        android:layout_marginBottom="30dp"
        app:cardCornerRadius="8dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="35dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/avenir_bold"
                android:text="@string/main_menu"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:id="@+id/lrMasuk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:background="@drawable/background"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/imageViewBag"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:contentDescription="@string/todo"
                        app:srcCompat="@mipmap/bag" />

                    <TextView
                        android:id="@+id/textViewBag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/avenir_medium"
                        android:gravity="center_horizontal"
                        android:paddingTop="6dp"
                        android:text="@string/absen_masuk"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:ignore="DuplicateIds" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lrPulang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/background"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/imageViewPulang"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:contentDescription="@string/todo"
                        app:srcCompat="@mipmap/out" />

                    <TextView
                        android:id="@+id/textViewPulang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/avenir_medium"
                        android:gravity="center_horizontal"
                        android:paddingTop="6dp"
                        android:text="@string/absen_pulang"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/lrJadwal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/background"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/imageViewTrip"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:contentDescription="@string/todo"
                        app:srcCompat="@mipmap/trip" />

                    <TextView
                        android:id="@+id/textViewTrip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/avenir_medium"
                        android:gravity="center_horizontal"
                        android:paddingTop="6dp"
                        android:text="@string/cek_trip"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/logout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/background"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/imageViewSetting"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:contentDescription="@string/todo"
                        app:srcCompat="@drawable/logout" />

                    <TextView
                        android:id="@+id/textViewSetting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/avenir_medium"
                        android:gravity="center_horizontal"
                        android:paddingTop="6dp"
                        android:text="@string/keluar"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>